src/test/ui/self/arbitrary_self_types_pin_lifetime_mismatch-async.nll.stderr
error: lifetime may not live long enough
  --> $DIR/arbitrary_self_types_pin_lifetime_mismatch-async.rs:8:52
   |
LL |     async fn a(self: Pin<&Foo>, f: &Foo) -> &Foo { f }
   |                          -         -               ^ function was supposed to return data with lifetime `'2` but it is returning data with lifetime `'1`
   |                          |         |
   |                          |         let's call the lifetime of this reference `'1`
   |                          let's call the lifetime of this reference `'2`

error: lifetime may not live long enough
  --> $DIR/arbitrary_self_types_pin_lifetime_mismatch-async.rs:11:75
   |
LL |     async fn c(self: Pin<&Self>, f: &Foo, g: &Foo) -> (Pin<&Foo>, &Foo) { (self, f) }
   |                          -          -                                     ^^^^^^^^^ function was supposed to return data with lifetime `'2` but it is returning data with lifetime `'1`
   |                          |          |
   |                          |          let's call the lifetime of this reference `'1`
   |                          let's call the lifetime of this reference `'2`

error: lifetime may not live long enough
  --> $DIR/arbitrary_self_types_pin_lifetime_mismatch-async.rs:17:64
   |
LL |     async fn bar<'a>(self: Alias<&Self>, arg: &'a ()) -> &() { arg }
   |                  --              -                             ^^^ function was supposed to return data with lifetime `'1` but it is returning data with lifetime `'a`
   |                  |               |
   |                  |               let's call the lifetime of this reference `'1`
   |                  lifetime `'a` defined here

error: aborting due to 3 previous errors

